ejabberd (1.1.1-5) unstable; urgency=low

  * UNRELEASED
  * add target get-orig-source in debian/rules

 -- Torsten Werner <twerner@debian.org>  Sat, 15 Jul 2006 00:01:50 +0200

ejabberd (1.1.1-4) unstable; urgency=low

  * updated Build-Depends for erlang 10.b.10
  * switched to quilt for managing upstream patches

 -- Torsten Werner <twerner@debian.org>  Sat, 24 Jun 2006 21:06:59 +0200

ejabberd (1.1.1-3) unstable; urgency=low

  [ Sergei Golovan ]
  * moved ejabberd SSL certificate from /etc/ssl/certs to /etc/ejabberd,
    closes: #368414

  [ Torsten Werner ]
  * upload to unstable

 -- Torsten Werner <twerner@debian.org>  Sat, 10 Jun 2006 18:13:34 +0200

ejabberd (1.1.1-2) experimental; urgency=low

  [ Sergei Golovan ]
  * changed Build-Depends from erlang-base-hipe to erlang-base
  * fix for lintian complaint about incorrect usage of chown

  [ Torsten Werner ]
  * making Build-Depends and erlang:Depends more strict: they are working now
    only with the latest versions of erlang

 -- Torsten Werner <twerner@debian.org>  Tue,  2 May 2006 21:00:47 +0200

ejabberd (1.1.1-1) experimental; urgency=low

  * New upstream release
  * applied changes from Sergei Golovan
  * removed src/Makefile.in from Debians SVN because the changes have been
    included upstream

 -- Torsten Werner <twerner@debian.org>  Mon,  1 May 2006 19:36:19 +0200

ejabberd (1.0.0-2) unstable; urgency=low

  * downgraded erlang-Depends to erlang-runtime, closes: #361739

 -- Torsten Werner <twerner@debian.org>  Mon, 10 Apr 2006 20:52:45 +0200

ejabberd (1.0.0-1) unstable; urgency=low

  * new upstream release, closes: #344330, #353989
    - Server-to-server Encryption for Enhanced Security: STARTTLS +
    SASL_EXTERNAL and STARTTLS + Dialback.
    - Different certificates can be defined for each virtual host.
    - Shared Roster groups support has been enhanced. New is the ability to
    add all registered users to a Shared Roster group.
    - Improved ODBC support.