@@ -1,0 +1,9 @@
+#!/bin/sh -e
+
+# Source debconf library.
+. /usr/share/debconf/confmodule
+
+db_input medium ejabberd/AdminUser || true
+db_input medium ejabberd/AdminPasswd || true
+db_go || true
+
