@@ -6,7 +6,7 @@
 % Users that have admin access.  Add line like one of the following after you
 % will be successfully registered on server to get admin access:
 %{acl, admin, {user, "aleksey"}}.
-%{acl, admin, {user, "ermine"}}.
+{acl, admin, {user, "__USER__"}}.
 
 % Blocked users:
 %{acl, blocked, {user, "test"}}.
