@@ -1,5 +1,5 @@
 debian/scripts/ejabberd usr/sbin/
 debian/scripts/ejabberdctl usr/sbin/
-debian/ejabberd.cfg etc/ejabberd/
+debian/ejabberd.cfg usr/share/ejabberd/
 debian/inetrc etc/ejabberd/
 
