@@ -5,58 +5,44 @@
 
 set -e
 
-# summary of how this script can be called:
-#        * <postinst> `configure' <most-recently-configured-version>
-#        * <old-postinst> `abort-upgrade' <new version>
-#        * <conflictor's-postinst> `abort-remove' `in-favour' <package>
-#          <new-version>
-#        * <deconfigured's-postinst> `abort-deconfigure' `in-favour'
-#          <failed-install-package> <version> `removing'
-#          <conflicting-package> <version>
-# for details, see /usr/doc/packaging-manual/
-#
-# quoting from the policy:
-#     Any necessary prompting should almost always be confined to the
-#     post-installation script, and should be protected with a conditional
-#     so that unnecessary prompting doesn't happen if a package's
-#     installation fails and the `postinst' is called with `abort-upgrade',
-#     `abort-remove' or `abort-deconfigure'.
+CONFIG_SOURCE=/usr/share/ejabberd/ejabberd.cfg
+CONFIG_TARGET=/etc/ejabberd/ejabberd.cfg
+TEMPFILE=$(mktemp)
 
-case "$1" in
-    configure)
-	chown ejabberd:ejabberd /etc/ejabberd
-	chmod 700 /etc/ejabberd
+. /usr/share/debconf/confmodule
 
-	chown ejabberd:ejabberd /etc/ejabberd/ejabberd.cfg
-	chmod 600 /etc/ejabberd/ejabberd.cfg
+setup_ejabberd()
+{
+  chown ejabberd:ejabberd /etc/ejabberd
+  chmod 700 /etc/ejabberd
 
-	install -m 700 -d /var/lib/ejabberd
-	chown -R ejabberd:ejabberd /var/lib/ejabberd
-	install -o ejabberd -g adm -m 750 -d /var/log/ejabberd
+  install -m 700 -d /var/lib/ejabberd
+  chown -R ejabberd:ejabberd /var/lib/ejabberd
+  install -o ejabberd -g adm -m 750 -d /var/log/ejabberd
 
-	# bug #368414
-	cd /etc/ssl/certs
-	if [ -f ejabberd.pem ] && [ ! -z $2 ] && dpkg --compare-versions "$2" lt-nl "1.1.1-3"
-	then
-	    echo "Moving ejabberd.pem from /etc/ssl/certs to /etc/ejabberd..."
-	    rm -f `openssl x509 -noout -hash < ejabberd.pem`.0
-	    mv ejabberd.pem /etc/ejabberd
-	    echo "Replacing /etc/ejabberd/ejabberd.pem for /etc/ssl/certs/ejabberd.pem in the config file..."
-	    sed -i -e 's:/etc/ssl/certs/ejabberd.pem:/etc/ejabberd/ejabberd.pem:g' /etc/ejabberd/ejabberd.cfg
-	fi
+  # bug #368414
+  cd /etc/ssl/certs
+  if [ -f ejabberd.pem ] && [ ! -z $2 ] && dpkg --compare-versions "$2" lt-nl "1.1.1-3"
+  then
+      echo "Moving ejabberd.pem from /etc/ssl/certs to /etc/ejabberd..."
+      rm -f $(openssl x509 -noout -hash < ejabberd.pem).0
+      mv ejabberd.pem /etc/ejabberd
+      echo "Replacing /etc/ejabberd/ejabberd.pem for /etc/ssl/certs/ejabberd.pem in the config file..."
+      sed -i -e 's:/etc/ssl/certs/ejabberd.pem:/etc/ejabberd/ejabberd.pem:g' /etc/ejabberd/ejabberd.cfg
+  fi
 
-	# making /etc/ejabberd/ejabberd.pem
-	cd /etc/ejabberd
-	if [ -f ejabberd.pem ]
-	then
-	    echo "You already have /etc/ejabberd/ejabberd.pem"
-	    chown ejabberd:ejabberd ejabberd.pem
-	    chmod 600 ejabberd.pem
-	else
-	    HOSTNAME=`hostname -s`
-	    DOMAINNAME=`hostname -d`
-	    openssl req -new -x509 -days 365 -nodes -out ejabberd.pem \
-		-keyout ejabberd.pem > /dev/null 2>&1 <<+
+  # making /etc/ejabberd/ejabberd.pem
+  ( cd /etc/ejabberd
+  if [ -f ejabberd.pem ]
+  then
+      echo "You already have /etc/ejabberd/ejabberd.pem"
+      chown ejabberd:ejabberd ejabberd.pem
+      chmod 600 ejabberd.pem
+  else
+      HOSTNAME=$(hostname -s)
+      DOMAINNAME=$(hostname -d)
+      openssl req -new -x509 -days 365 -nodes -out ejabberd.pem \
+	  -keyout ejabberd.pem > /dev/null 2>&1 <<+
 .
 .
 .
@@ -65,23 +51,27 @@ $HOSTNAME
 ejabberd
 root@$HOSTNAME.$DOMAINNAME
 +
-	fi
-	chown ejabberd:ejabberd /etc/ejabberd/ejabberd.pem
-	chmod 600 /etc/ejabberd/ejabberd.pem
+  fi
+  chown ejabberd:ejabberd /etc/ejabberd/ejabberd.pem
+  chmod 600 /etc/ejabberd/ejabberd.pem
+  )
 
-	# before 0.7.5-1 init.d script returned before ejabberd actually stopped
-	if [ ! -z $2 ] && dpkg --compare-versions "$2" lt-nl "0.7.5-1"
-	then
-	    echo "Waiting for stopping ejabberd..."
-	    sleep 5
-	fi
-	# database format have been changed in 0.9, so extra backup
-	if [ ! -z $2 ] && dpkg --compare-versions "$2" lt-nl "0.9-1"
-	then
-	    echo "Backing up old database to /var/lib/ejabberd.bak..."
-	    rm -rf /var/lib/ejabberd.bak
-	    cp -a /var/lib/ejabberd /var/lib/ejabberd.bak
-	fi
+  db_get ejabberd/AdminUser
+  USER="$RET"
+  db_get ejabberd/AdminPasswd
+  PASSWD="$RET"
+  sed -e "s/__USER__/$USER/g" $CONFIG_SOURCE > $TEMPFILE
+  ucf --three-way --debconf-ok $TEMPFILE $CONFIG_TARGET
+  db_stop
+  chown ejabberd:ejabberd $CONFIG_TARGET
+  chmod 600 $CONFIG_TARGET
+  invoke-rc.d ejabberd start
+  ejabberdctl register $USER localhost $PASSWD
+}
+
+case "$1" in
+    configure)
+    setup_ejabberd
     ;;
 
     abort-upgrade|abort-remove|abort-deconfigure)
