@@ -5,22 +5,15 @@
 
 set -e
 
-# summary of how this script can be called:
-#        * <postrm> `remove'
-#        * <postrm> `purge'
-#        * <old-postrm> `upgrade' <new-version>
-#        * <new-postrm> `failed-upgrade' <old-version>
-#        * <new-postrm> `abort-install'
-#        * <new-postrm> `abort-install' <old-version>
-#        * <new-postrm> `abort-upgrade' <old-version>
-#        * <disappearer's-postrm> `disappear' <r>overwrit>r> <new-version>
-# for details, see /usr/doc/packaging-manual/
+CONFIG_TARGET=/etc/ejabberd/ejabberd.cfg
 
 case "$1" in
     remove|upgrade|failed-upgrade|abort-install|abort-upgrade|disappear)
         ;;
 
     purge)
+        ucf --purge $CONFIG_TARGET
+	rm -f $CONFIG_TARGET
 	rm -Rf /etc/ejabberd 2>/dev/null
 	rm -f /etc/default/ejabberd 2>/dev/null
 	rm -Rf /var/log/ejabberd 2>/dev/null
